--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -8,10 +8,6 @@
   border-radius: 0.4rem;
 }
 
-.button__text:visited {
-  color: var(--font-black);
-}
-
 .button__text:hover {
-  color: var(--brand-color);
+  filter: brightness(1.1);
 }
